<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_exit_prevent_message">Press back again to close this app</string>
    <string name="title_section1">Simulator</string>
    <string name="title_section2">Attitude</string>
    <string name="title_section3">Basic indicators</string>
    <string name="title_section4">Extra indicators</string>
    <string name="title_section5">Measures</string>
    <string name="title_section6">Models</string>
    <string name="title_section7">Orbit</string>
    <string name="title_section8">Models</string>
    <string name="title_section9">Map</string>
    <string name="title_section10">Coverage</string>
    <string name="title_section11">Stations</string>
    <string name="title_section12">Models</string>
    <string name="title_section13">Preferences</string>
    <string name="title_section14">WebGL test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_screenshot">About</string>
    <string name="action_reset_conf">Reset Conf.</string>
    <string name="action_reset_db">Reset Missions</string>
    <string name="action_about">About</string>
    <string name="action_share">Share App</string>
    <string name="action_rate">Rate App</string>
    <string name="action_tutorial">Reset tutorial</string>
    <string name="rate_dialog_rate_app">Rate Stavor</string>
    <string name="rate_dialog_rate_message">If you enjoy using Stavor, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_dialog_remind_me_later">Remind me later</string>
    <string name="rate_dialog_no_thanks">No, thanks</string>
    <string name="station_editor">Station editor</string>
    <string name="station_name">Name:</string>
    <string name="station_lat">Latitude (deg):</string>
    <string name="station_lon">Longitude (deg):</string>
    <string name="station_alt">Altitude (m):</string>
    <string name="station_elev">Elevation min (deg):</string>
    <string name="station_bw">The antenna is considered to have a [90º,-90º] elevation mobility, without obstacles.</string>
    <string name="station_edit">Edit</string>
    <string name="station_create">Create</string>
    <string name="station_format_error">Format error: review the fields</string>
    <string name="station_error_create">Error creating station in database</string>
    <string name="station_error_edit">Error editing station in database</string>
    <string name="station_name_is_mandatory">The station name is mandatory</string>
    <string name="station_elevation_out_of_range">The elevation is out of range [-5º,90º]</string>
    <string name="pro_only">(PRO version)</string>
    <string name="mission_parsing_angle_error">Error parsing angles</string>
    <string name="mission_editor">Mission editor</string>
    <string name="mission_edit">Edit</string>
    <string name="mission_create">Create</string>
    <string name="mission_name">Name:</string>
    <string name="mission_description">Description:</string>
    <string name="mission_time">Time:</string>
    <string name="mission_date">Date/Time:</string>
    <string name="mission_duration">Mission duration (s\'):</string>
    <string name="mission_step">Simulation step (s):</string>
    <string name="mission_orbit">Orbit</string>
    <string name="mission_a">Semi-major axis (m):</string>
    <string name="mission_speed">Aprox. simulation speed (s\'/s):</string>
    <string name="mission_dur">Aprox. simulation duration (s):</string>
    <string name="mission_e">Eccentricity:</string>
    <string name="mission_i_deg">Inclination (deg):</string>
    <string name="mission_omega_deg">Arg. periapsis (deg):</string>
    <string name="mission_raan_deg">R.A.A.N (deg):</string>
    <string name="mission_lm_deg">Mean anomaly (deg):</string>
    <string name="mission_i">Inclination (rad):</string>
    <string name="mission_omega">Arg. periapsis (rad):</string>
    <string name="mission_raan">R.A.A.N (rad):</string>
    <string name="mission_lm">Mean anomaly (rad):</string>
    <string name="mission_format_error">Format error: review the fields</string>
    <string name="mission_error_create">Error creating mission in database</string>
    <string name="mission_error_edit">Error editing mission in database</string>
    <string name="mission_name_is_mandatory">The mission name is mandatory</string>
    <string name="menu_views_ref_frame">Ref.Frame</string>
    <string name="menu_views_ref_frame_xyz">XYZ</string>
    <string name="menu_views_ref_frame_x">X</string>
    <string name="menu_views_ref_frame_xx">-X</string>
    <string name="menu_views_ref_frame_y">Y</string>
    <string name="menu_views_ref_frame_yy">-Y</string>
    <string name="menu_views_ref_frame_z">Z</string>
    <string name="menu_views_ref_frame_zz">-Z</string>
    <string name="menu_views_spacecraft">Spacecraft</string>
    <string name="menu_views_spacecraft_xyz">XYZ</string>
    <string name="menu_views_spacecraft_rear">Rear</string>
    <string name="menu_views_spacecraft_front">Front</string>
    <string name="menu_views_spacecraft_top">Top</string>
    <string name="menu_views_spacecraft_bottom">Bottom</string>
    <string name="menu_views_spacecraft_left">Left</string>
    <string name="menu_views_spacecraft_right">Right</string>
    <string name="menu_views_earth">Earth</string>
    <string name="menu_views_sun">Sun</string>
    <string name="menu_orbviews_free">Free</string>
    <string name="menu_orbviews_locked">Locked</string>
    <string name="menu_mapviews_free">Free</string>
    <string name="menu_mapviews_locked">Locked</string>
    <string name="about">About</string>
    <string name="cs_site">http://c-s.fr/</string>
    <string name="about_table_project">Project</string>
    <string name="about_project_license">Project license:</string>
    <string name="about_project_license_value">Free</string>
    <string name="about_table_orekit">Orekit</string>
    <string name="about_table_crosswalk">Crosswalk-Webview-</string>
    <string name="about_table_openlayers">OpenLayers</string>
    <string name="about_table_colorpicker">AndroidColorPicker</string>
    <string name="about_table_loader">CWAC-LoaderEx</string>
    <string name="about_table_http">HttpClientAndroidLib</string>
    <string name="about_table_threejs">ThreeJS</string>
    <string name="about_table_gson">GSON</string>
    <string name="about_table_version">Version</string>
    <string name="about_table_license">License</string>
    <string name="about_package">Package:</string>
    <string name="about_start_date">Project starting date:</string>
    <string name="about_version">Current version:</string>
    <string name="about_version_date">Last update date:</string>
    <string name="about_install_date">Install date:</string>
    <string name="about1">This application is a product of CS Systèmes d\'Information.</string>
    <string name="about2">With the integration of the following projects:</string>
    <string name="about_lang">Languages:</string>
    <string name="about_langs">-EN- FR ES</string>
    <string name="about_platform">Architecture:</string>
    <string name="about_app">App:</string>
    <string name="about_appname">Spacecraft Three-dimensional Attitude Visualization using ORekit library</string>
    <string name="about_flavor">Flavor</string>
    <string name="about_flavor_public">Public</string>
    <string name="about_flavor_pro">Professional</string>
    <string name="tutorial_continue">Continue</string>
    <string name="tutorial_dont_show_again">Don\'t show again</string>
    <string name="tutorial_sim_1">Select the simulator mode</string>
    <string name="tutorial_sim_2a">Choose a Mission</string>
    <string name="tutorial_sim_2b">Introduce remote simulator network parameters</string>
    <string name="tutorial_sim_2a_title">Local:</string>
    <string name="tutorial_sim_2b_title">Remote:</string>
    <string name="tutorial_sim_3">Start the simulator</string>
    <string name="tutorial_hud_1">Change view</string>
    <string name="tutorial_hud_2">Control simulation</string>
    <string name="tutorial_hud_3">Visualization</string>
    <string name="tutorial_hud_4">Retractable panel</string>
    <string name="dialog_welcome">Welcome</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_ignore">Ignore</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_install_message">The default models and data for the simulator have been installed in the Orekit data root:</string>
    <string name="dialog_delete_title_station">Delete Ground Station</string>
    <string name="dialog_delete_message_station">You are going to delete the ground station: </string>
    <string name="dialog_delete_title">Delete Mission</string>
    <string name="dialog_delete_message">You are going to delete the mission: </string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_copy_title">Copy Mission</string>
    <string name="dialog_copy_message">Do you want to copy the mission</string>
    <string name="dialog_copy_confirm">Copy</string>
    <string name="dialog_copy_cancel">Cancel</string>
    <string name="dialog_reset_title">Reset Config.</string>
    <string name="dialog_reset_message">You are going to reset all configurations and data to default values (Missions will be kept)</string>
    <string name="dialog_reset_confirm">Reset</string>
    <string name="dialog_reset_cancel">Cancel</string>
    <string name="dialog_reset_db_title">Reset Missions</string>
    <string name="dialog_reset_db_message">You are going to reset the Missions database to its original state</string>
    <string name="dialog_reset_db_confirm">Reset</string>
    <string name="dialog_reset_db_cancel">Cancel</string>
    <string name="dialog_simulator_title">Simulator</string>
    <string name="dialog_simulator_message">Connecting...</string>
    <string name="basic_indicator_position">Position</string>
    <string name="basic_indicator_velocity">Velocity</string>
    <string name="basic_indicator_momentum">Momentum</string>
    <string name="basic_indicator_acceleration">Acceleration</string>
    <string name="basic_indicator_attitude">Attitude</string>
    <string name="title_simulator">Simulator</string>
    <string name="title_sim_local">Local</string>
    <string name="title_sim_remote">Remote</string>
    <string name="button_sim_play">Play</string>
    <string name="button_sim_pause">Pause</string>
    <string name="button_sim_stop">Stop</string>
    <string name="name_">Name:</string>
    <string name="type_">Type:</string>
    <string name="color_">Color:</string>
    <string name="units_">Units:</string>
    <string name="color">Color</string>
    <string name="ok">OK</string>
    <string name="target">Target</string>
    <string name="static_vector">Static Vector</string>
    <string name="dynamic_vector">Dynamic Vector</string>
    <string name="units_km">[Km]</string>
    <string name="fps_zero">0 FPS</string>
    <string name="eg_vel">Vel. 0,00 Km/s</string>
    <string name="eg_accel">Accel. 0,00 Km/s2</string>
    <string name="eg_roll">Roll: 0,0º</string>
    <string name="eg_pitch">Pitch: 0,0º</string>
    <string name="eg_yaw">Yaw: 0,0º</string>
    <string name="eg_radium">Orbit radius: 0,0 Km</string>
    <string name="eg_mass">Mass: 0,000 Kg</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="test_3">Test 3</string>
    <string name="powered_by">Powered by:</string>
    <string name="panel_vel">Vel.</string>
    <string name="panel_accel">Accel.</string>
    <string name="panel_radium">Orbit radius:</string>
    <string name="panel_mass">Mass:</string>
</resources>