<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cs.si.stavor.fragments.HudFragment" >

    <item
        android:id="@+id/menu_views_ref_frame"
        android:title="@string/menu_views_ref_frame"
        app:showAsAction="never">
        <menu>
		
		    <item
		        android:id="@+id/menu_views_ref_frame_xyz"
		        android:title="@string/menu_views_ref_frame_xyz"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_ref_frame_x"
		        android:title="@string/menu_views_ref_frame_x"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_ref_frame_xx"
		        android:title="@string/menu_views_ref_frame_xx"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_ref_frame_y"
		        android:title="@string/menu_views_ref_frame_y"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_ref_frame_yy"
		        android:title="@string/menu_views_ref_frame_yy"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_ref_frame_z"
		        android:title="@string/menu_views_ref_frame_z"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_ref_frame_zz"
		        android:title="@string/menu_views_ref_frame_zz"
		        app:showAsAction="never"/>
		</menu>
    </item>
    <item
        android:id="@+id/menu_views_spacecraft"
        android:title="@string/menu_views_spacecraft"
        app:showAsAction="never">
        <menu>
		    <item
		        android:id="@+id/menu_views_spacecraft_xyz"
		        android:title="@string/menu_views_spacecraft_xyz"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_spacecraft_rear"
		        android:title="@string/menu_views_spacecraft_rear"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_spacecraft_front"
		        android:title="@string/menu_views_spacecraft_front"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_spacecraft_top"
		        android:title="@string/menu_views_spacecraft_top"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_spacecraft_bottom"
		        android:title="@string/menu_views_spacecraft_bottom"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_spacecraft_left"
		        android:title="@string/menu_views_spacecraft_left"
		        app:showAsAction="never"/>
			<item
		        android:id="@+id/menu_views_spacecraft_right"
		        android:title="@string/menu_views_spacecraft_right"
		        app:showAsAction="never"/>
		</menu>
    </item>
    <item
        android:id="@+id/menu_views_earth"
        android:title="@string/menu_views_earth"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_views_sun"
        android:title="@string/menu_views_sun"
        app:showAsAction="never"/>

</menu>
