<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cs.si.stavor.MainActivity" >

    <!-- <item
        android:id="@+id/action_screenshot"
        android:title="@string/action_screenshot"
        app:showAsAction="withText|ifRoom"/> -->
    <item android:id="@+id/action_simulator"
          android:icon="@drawable/ab_simulator_s"
          android:title="@string/title_section1"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_attitude"
          android:icon="@drawable/ab_attitude_s"
          android:title="@string/title_section2"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_orbit"
          android:icon="@drawable/ab_orbit_s"
          android:title="@string/title_section7"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_map"
          android:icon="@drawable/ab_map_s"
          android:title="@string/title_section9"
          app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
            android:id="@+id/menu_item_share"
            app:showAsAction="never"
        	android:orderInCategory="100"
            android:title="@string/action_share"
            app:actionProviderClass=
                "android.support.v7.widget.ShareActionProvider" />
    <item
            android:id="@+id/menu_item_rate"
            app:showAsAction="never"
        	android:orderInCategory="100"
            android:title="@string/action_rate" />
    
    <!-- <item
        android:id="@+id/action_reset_conf"
        android:title="@string/action_reset_conf"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reset_db"
        android:title="@string/action_reset_db"
        app:showAsAction="never"/> -->

</menu>
